# django_simple_notifications

./: README.md  manage.py  pyproject.toml
django_notifications/: asgi.py  settings.py  urls.py  wsgi.py
django_simple_notifications/: apps.py  dto.py  enums.py  facades.py  mappers.py  models.py  repositories.py  services.py  types.py
django_simple_notifications/UML/: send_notification.puml
django_simple_notifications/entities/: email_notification.py  notification.py  slack_webhook_notification.py
django_simple_notifications/migrations/: 0001_initial.py
notifications/: admin.py  apps.py  dto.py  entities.py  enums.py  facades.py  factories.py  mappers.py  mediums.py  models.py  repositories.py  services.py  settings.py  types.py
notifications/UML/: class_overview.html
notifications/entities/: discord_webhook_notification.py  email_notification.py  notification.py
notifications/migrations/: 0001_initial.py  0002_alter_notification_type.py  0003_alter_notification_type.py
