[tool.poetry]
name = "django-simple-notifications"
version = "0.1.0"
description = "Simple system for sending notifications."
authors = ["michalsimonienko <yqhsms@gmail.com>"]
readme = "README.md"
packages = [{include = "notifications"}]
license = "MIT"
homepage = "https://github.com/Saymmic/django_simple_notifications"
repository = "https://github.com/Saymmic/django_simple_notifications"
keywords = ["django", "notification", "notifications"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Notifications",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11.1"
django = "^4.1.7"
pygments = "^2.14.0"
discord = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100